--- a/AppUninstall/app/src/main/AndroidManifest.xml
+++ b/AppUninstall/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
     <dist:module dist:instant="true" />
 
     <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES"/>
-    <uses-permission android:name="android.permission.DELETE_PACKAGES"/>
+<!--    只有系统app才能获得此权限-->
+<!--    <uses-permission android:name="android.permission.DELETE_PACKAGES"/>-->
 
 </manifest>
